# Box

./: .gitignore  CONTRIBUTING.md  README.md  model_allowlist.json
.github/workflows/: android-apk.yml
Android/src/: gradle.properties  settings.gradle.kts
Android/src/app/: build.gradle.kts
Android/src/app/src/main/: AndroidManifest.xml
Android/src/app/src/main/assets/skills/web-research/: SKILL.md
Android/src/app/src/main/java/com/box/gallery/: MainActivity.kt  ProcessDeathTracker.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/: Analytics.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/common/: Types.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/customtasks/agentchat/: AddMcpServerFromUrlDialog.kt  AgentChatScreen.kt  AgentChatTaskModule.kt  AgentTools.kt  McpManagerBottomSheet.kt  McpManagerViewModel.kt  McpToolCallPermissionDialog.kt  McpToolManagerBottomSheet.kt  SkillManagerViewModel.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/customtasks/mobileactions/: MobileActionsTask.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/data/: Consts.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/engine/: LlamaCppEngine.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/feature/jarvis/: JarvisFeatureFlag.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/feature/jarvis/core/: JarvisManager.kt  JarvisModelManager.kt  JarvisSessionManager.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/feature/jarvis/di/: JarvisModule.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/feature/jarvis/memory/: JarvisDatabase.kt  JarvisMemoryDao.kt  JarvisMemoryManager.kt  MemoryEntities.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/feature/jarvis/service/: JarvisForegroundService.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/feature/jarvis/settings/: JarvisSettingsManager.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/feature/jarvis/tools/: AlarmTool.kt  CallTool.kt  FlashlightTool.kt  OpenAppTool.kt  OpenSettingsTool.kt  ShareTool.kt  Tool.kt  ToolExecutor.kt  ToolRegistry.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/feature/jarvis/ui/: JarvisOverlayService.kt  JarvisSettingsScreen.kt  JarvisSettingsViewModel.kt  JarvisVoiceOrb.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/feature/jarvis/voice/: JarvisVoiceManager.kt  SimpleWakeWordEngine.kt  SystemTtsEngine.kt  TtsEngine.kt  TtsEngineFactory.kt  WakeWordEngine.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/runtime/: LlamaCppModelHelper.kt  LlmModelHelper.kt  ModelHelperExt.kt  ThreadPriorityHints.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/runtime/aicore/: AICoreModelHelper.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/common/: ConfigDialog.kt  ModelPageAppBar.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/home/: HomeScreen.kt  SettingsDialog.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/llmchat/: LlmChatScreen.kt  LlmChatViewModel.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/llmsingleturn/: LlmSingleTurnTaskModule.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/modelmanager/: ModelManagerViewModel.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/navigation/: GalleryNavGraph.kt
Android/src/app/src/main/proto/: mcp.proto  settings.proto
Android/src/app/src/main/res/values/: strings.xml
Android/src/app/src/main/res/xml/: network_security_config.xml
Android/src/gradle/: libs.versions.toml
Android/src/smollm/: build.gradle.kts
Android/src/smollm/src/main/cpp/: CMakeLists.txt  LLMInference.cpp  LLMInference.h  smollm.cpp
Android/src/smollm/src/main/java/com/jegly/offlineLLM/smollm/: SmolLM.kt
(+5 files in other folders)
